--- a/docs/api/qiskit/release-notes/2.0.mdx
+++ b/docs/api/qiskit/release-notes/2.0.mdx
@@ -14,15 +14,49 @@ in_page_toc_max_heading_level: 3
 
 <span id="id1" />
 
+## 2.0.3
+
+<span id="relnotes-2-0-3-prelude" />
+
+### Prelude
+
+Qiskit v2.0.3 is a bugfix release for the v2.0 minor version series.
+
+<span id="relnotes-2-0-3-bug-fixes" />
+
+### Bug Fixes
+
+*   [`ApplyLayout`](/docs/api/qiskit/qiskit.transpiler.passes.ApplyLayout "qiskit.transpiler.passes.ApplyLayout") will now correctly handle the case of applying a zero-qubit [`Layout`](/docs/api/qiskit/qiskit.transpiler.Layout "qiskit.transpiler.Layout"). Previously, it would claim that no layout had been set, even if the `"layout"` field of the [`PropertySet`](/docs/api/qiskit/qiskit.passmanager.PropertySet "qiskit.passmanager.PropertySet") was equal to `Layout()`.
+
+*   Fixed an issue in the [`ElidePermutations`](/docs/api/qiskit/qiskit.transpiler.passes.ElidePermutations "qiskit.transpiler.passes.ElidePermutations") transpiler pass, where the output permutation was not updated correctly in the presence of [`PermutationGate`](/docs/api/qiskit/qiskit.circuit.library.PermutationGate "qiskit.circuit.library.PermutationGate") operations. This would result in an incorrect output circuit and an incorrect `virtual_permutation_layout` property in the `property_set` being set. When run as part of a larger [`PassManager`](/docs/api/qiskit/qiskit.transpiler.PassManager "qiskit.transpiler.PassManager") this would also result in an incorrect [`TranspileLayout`](/docs/api/qiskit/qiskit.transpiler.TranspileLayout "qiskit.transpiler.TranspileLayout") being returned in the [`QuantumCircuit.layout`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit#layout "qiskit.circuit.QuantumCircuit.layout") in the output circuit.
+
+*   Fixed a bug in the [`HighLevelSynthesis`](/docs/api/qiskit/qiskit.transpiler.passes.HighLevelSynthesis "qiskit.transpiler.passes.HighLevelSynthesis") pass when unrolling nested/custom [`Instruction`](/docs/api/qiskit/qiskit.circuit.Instruction "qiskit.circuit.Instruction") objects. If the [`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") returned by [`Instruction.definition`](/docs/api/qiskit/qiskit.circuit.Instruction#definition "qiskit.circuit.Instruction.definition") of a custom object contained any [`Clbit`](/docs/api/qiskit/circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit") objects, these classical bits would incorrectly use the internal index inside the [`Instruction.definition`](/docs/api/qiskit/qiskit.circuit.Instruction#definition "qiskit.circuit.Instruction.definition") [`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") instead of mapping them to the corresponding index in the outer [`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit").
+
+*   Fixed a bug in the [`PauliEvolutionSynthesisDefault`](/docs/api/qiskit/qiskit.transpiler.passes.synthesis.hls_plugins.PauliEvolutionSynthesisDefault "qiskit.transpiler.passes.synthesis.hls_plugins.PauliEvolutionSynthesisDefault") and [`PauliEvolutionSynthesisRustiq`](/docs/api/qiskit/qiskit.transpiler.passes.synthesis.hls_plugins.PauliEvolutionSynthesisRustiq "qiskit.transpiler.passes.synthesis.hls_plugins.PauliEvolutionSynthesisRustiq") plugins that modified the .synthesis attribute of the original circuit when setting `preserve_order=False`. The behavior of the plugins has been restored and the original circuit is now preserved throughout the transpilation pipeline.
+
+*   Fixed a compatibility issue with the minimum supported version of [rustworkx](https://www.rustworkx.org/), 0.15. With certain inputs the [`VF2Layout`](/docs/api/qiskit/qiskit.transpiler.passes.VF2Layout "qiskit.transpiler.passes.VF2Layout") and [`VF2PostLayout`](/docs/api/qiskit/qiskit.transpiler.passes.VF2PostLayout "qiskit.transpiler.passes.VF2PostLayout") were previously using a rustworkx method that was added in rustworkx 0.16.0 which would cause an error when using an older rustworkx release which is listed as supported.
+
+*   [`SabreLayout`](/docs/api/qiskit/qiskit.transpiler.passes.SabreLayout "qiskit.transpiler.passes.SabreLayout") and [`SabreSwap`](/docs/api/qiskit/qiskit.transpiler.passes.SabreSwap "qiskit.transpiler.passes.SabreSwap") will no longer panic when applying the routing result to a circuit that uses [`expr.Var`](/docs/api/qiskit/circuit_classical#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.Var") or [`Stretch`](/docs/api/qiskit/circuit_classical#qiskit.circuit.classical.expr.Stretch "qiskit.circuit.classical.expr.Stretch") objects in a nested control-flow scope.
+
+*   [`qiskit.circuit.library.quantum_volume()`](/docs/api/qiskit/qiskit.circuit.library.quantum_volume "qiskit.circuit.library.quantum_volume") was updated to handle a [`numpy.random.Generator`](https://numpy.org/doc/stable/reference/random/generator.html#numpy.random.Generator "(in NumPy v2.3)") as input for its `seed` argument. Previously, such a generator argument would result in a `TypeError`.
+
+<span id="relnotes-2-0-2" />
+
+<span id="id2" />
+
 ## 2.0.2
 
 <span id="relnotes-2-0-2-prelude" />
+
+<span id="id3" />
 
 ### Prelude
 
 Qiskit v2.0.2 is a bugfix release for the v2.0 minor version series.
 
 <span id="relnotes-2-0-2-bug-fixes" />
+
+<span id="id4" />
 
 ### Bug Fixes
 
@@ -34,13 +68,13 @@ Qiskit v2.0.2 is a bugfix release for the v2.0 minor version series.
 
 <span id="relnotes-2-0-1" />
 
-<span id="id2" />
+<span id="id5" />
 
 ## 2.0.1
 
 <span id="relnotes-2-0-1-prelude" />
 
-<span id="id3" />
+<span id="id6" />
 
 ### Prelude
 
@@ -48,7 +82,7 @@ Qiskit v2.0.1 is a minor bugfix release for the v2.0.x release series.
 
 <span id="relnotes-2-0-1-bug-fixes" />
 
-<span id="id4" />
+<span id="id7" />
 
 ### Bug Fixes
 
@@ -78,13 +112,13 @@ Qiskit v2.0.1 is a minor bugfix release for the v2.0.x release series.
 
 <span id="relnotes-2-0-0" />
 
-<span id="id5" />
+<span id="id8" />
 
 ## 2.0.0
 
 <span id="relnotes-2-0-0-prelude" />
 
-<span id="id6" />
+<span id="id9" />
 
 ### Prelude
 
@@ -541,7 +575,7 @@ In line with our [semantic versioning policy](/docs/open-source/qiskit-sdk-versi
     >
     > ![\_images/release\_notes-4.png](/docs/images/api/qiskit/release_notes-4.avif)
 
-*   Added a new argument `max_block_width` to the `BlockCollector` class and to the [`CollectLinearFunctions`](/docs/api/qiskit/qiskit.transpiler.passes.CollectLinearFunctions "qiskit.transpiler.passes.CollectLinearFunctions") and [`CollectCliffords`](/docs/api/qiskit/qiskit.transpiler.passes.CollectCliffords "qiskit.transpiler.passes.CollectCliffords") transpiler passes. This argument allows you to restrict the maximum number of qubits over which a block of nodes is defined.
+*   Added a new argument `max_block_width` to the [`BlockCollector`](/docs/api/qiskit/qiskit.dagcircuit.BlockCollector "qiskit.dagcircuit.BlockCollector") class and to the [`CollectLinearFunctions`](/docs/api/qiskit/qiskit.transpiler.passes.CollectLinearFunctions "qiskit.transpiler.passes.CollectLinearFunctions") and [`CollectCliffords`](/docs/api/qiskit/qiskit.transpiler.passes.CollectCliffords "qiskit.transpiler.passes.CollectCliffords") transpiler passes. This argument allows you to restrict the maximum number of qubits over which a block of nodes is defined.
 
     For example:
 
@@ -1192,7 +1226,7 @@ In line with our [semantic versioning policy](/docs/open-source/qiskit-sdk-versi
 
 <span id="relnotes-2-0-0-bug-fixes" />
 
-<span id="id7" />
+<span id="id10" />
 
 ### Bug Fixes
 
