--- a/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
+++ b/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
@@ -16,7 +16,7 @@ By the end of this module, you should be able to:
 
 Many businesses would leap at the chance to go back in time to capitalize early on yesterday’s game-changing technologies, such as the internet. The chance to get ahead of the competition is here again with quantum computing. The technology is maturing, and now is the time to build your quantum skills and understand quantum’s immense potential for addressing computationally intensive problems.
 
-In the era of quantum computing, system performance will be key in achieving full quantum potential and scale—when we can definitively demonstrate, in certain use cases, a significant performance advantage over classical computers. Specifically, when a quantum computation is either hundreds or thousands of times faster, needs a smaller fraction of the memory, or makes something seemingly impossible possible. Our work with UC Berkeley demonstrates the power of currently available IBM Quantum processors to explore meaningful computations and realistic applications before the era of fault tolerance.
+In the era of quantum computing, system performance will be key in achieving full quantum potential and scale—when we can definitively demonstrate, in certain use cases, a significant performance advantage over classical computers. Specifically, when a quantum computation is either hundreds or thousands of times faster, needs a smaller fraction of the memory, or makes something seemingly impossible possible. Our work with UC Berkeley demonstrates the power of currently available IBM Quantum&reg; processors to explore meaningful computations and realistic applications before the era of fault tolerance.
 
 Quantum computers could soon solve valuable problems that have long challenged classical supercomputers. Governments and industry leaders worldwide are already exploring potential use cases in healthcare, materials science, machine learning, and more. Organizations that dive in now and become quantum ready will have a distinct advantage as these technologies evolve.
 
@@ -77,7 +77,7 @@ Click on the triangles below to see the capabilities of quantum ready organizati
 
 
 
-As described in *[The Quantum Decade](https://www.ibm.com/thought-leadership/institute-business-value/report/quantum-decade)*, quantum readiness is crucial because we help clients visualize and prepare to use the future computational power of quantum computing. IBM works with clients to build their skills and explore use cases with high business impact. Key insights can already be developed by executing use cases that are small enough to run on current quantum computers. As the technology continues to improve, our clients will grow the scope of these use cases and use quantum computing for business advantage.
+As described in *[The Quantum Decade](https://www.ibm.com/thought-leadership/institute-business-value/report/quantum-decade)*, quantum readiness is crucial because we help clients visualize and prepare to use the future computational power of quantum computing. IBM&reg; works with clients to build their skills and explore use cases with high business impact. Key insights can already be developed by executing use cases that are small enough to run on current quantum computers. As the technology continues to improve, our clients will grow the scope of these use cases and use quantum computing for business advantage.
 
 In the next sections, we describe three ways organizations can build their capacity to disrupt industries, create competitive advantage, and respond to threats from quantum-savvy competitors. Organizations can invest in quantum workforce development, identify quantum use cases to capture business value, and protect against quantum threats.
 
