--- a/learning/courses/basics-of-quantum-information/index.mdx
+++ b/learning/courses/basics-of-quantum-information/index.mdx
@@ -7,7 +7,7 @@ description: Learn about quantum states, projective measurements, and unitary op
 
 !["Hero image"](/learning/images/courses/basics-of-quantum-information/hero.svg)
 
-Welcome to *Basics of Quantum Information,* the first course in the *Understanding Quantum Information and Computation* series comprising the following courses:
+Welcome to *Basics of quantum information,* the first course in the *Understanding quantum information and computation* series comprising the following courses:
 
 - Basics of quantum information (this course)
 - [Fundamentals of quantum algorithms](/learning/courses/fundamentals-of-quantum-algorithms/index)
