--- a/docs/guides/instances.ipynb
+++ b/docs/guides/instances.ipynb
@@ -53,16 +53,16 @@
     "<CloudContent>\n",
     "Access to IBM Quantum Platform services is controlled by the **instances** to which you are assigned. Users can belong to more than one instance at any given time.\n",
     "\n",
-    "An instance is a deployment of Qiskit Runtime. You need a different instance for every service plan (such as Open or Standard) you use in every region that you want to use. The account manager and anyone with enough permission can create an instance and define its configuration, such as its allocations, usage limits, quantum computers, and user permissions. Each instance is identified by a unique Cloud Resource Name (CRN).  This CRN is used when sending workloads from your Qiskit programs.\n",
+    "An instance is a deployment of Qiskit Runtime. You need a different instance for every service plan (such as Open or Standard) you use in every region that you want to use. The account manager and anyone with enough permission can create an instance and define its configuration, such as its allocations, usage limits, quantum computers, and user permissions. Each instance is identified by a unique Cloud Resource Name (CRN).  This CRN can be used when sending workloads from your Qiskit programs.\n",
     "\n",
-    "The IBM Quantum Platform [dashboard](https://quantum.cloud.ibm.com/) displays the instances to which you have access.  You can view full details, edit, and delete instances on the [Instances page.](https://quantum.cloud.ibm.com/instances)\n",
+    "The IBM Quantum Platform [dashboard](https://quantum.cloud.ibm.com/) displays the instances to which you have access.  Depending on your access, you can view full details, edit, and delete instances on the [Instances page.](https://quantum.cloud.ibm.com/instances)\n",
     "\n",
     "It is important that you understand which instance you are using, because all instances that are not associated with the Open Plan incur a cost.\n",
     "</CloudContent>\n",
     "<span id=\"open-plan\"></span>\n",
     "## Open Plan instance\n",
     "<LegacyContent>\n",
-    "By default, users who sign up for an IBM Quantum account are assigned to the Open Plan and the Open Plan's instance, `ibm-q/open/main`. To guarantee that everyone can use the quantum computers allocated to the plan fairly, **an individual can have no more than three jobs running and/or in the queue (across all quantum computers) at the same time.** Submitting more than three jobs at a time will return error [#3458](../errors#3458), and additional jobs will be canceled.\n",
+    "By default, users who sign up for an IBM Quantum account are assigned to the Open Plan and the Open Plan's instance, `ibm-q/open/main`. To guarantee that everyone can use the quantum computers allocated to the plan fairly, **an individual can have no more than three jobs running or queued (across all quantum computers) at the same time.** Submitting more than three jobs at a time will return error [#3458](../errors#3458), and additional jobs will be canceled.\n",
     "\n",
     "Those using the Open Plan instance have up to 10 minutes total of quantum time per month, which resets at 00:00:00 UTC on the first of each calendar month. Open Plan users can track their usage on the [Platform dashboard,](https://quantum.ibm.com/) [Workloads,](https://quantum.ibm.com/workloads) and [Account](https://quantum.ibm.com/account) pages.\n",
     "</LegacyContent>\n",
@@ -149,10 +149,28 @@
     "\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "You must use the CRN to specify an instance to use; either when initializing the service or when sending the workload to a QPU.  The instance's CRN is listed on the [Platform dashboard](https://quantum.cloud.ibm.com/). Before running the below code, follow the steps to [save an account.](/docs/guides/cloud-setup#cloud-save)\n",
+    "You can use the CRN or instance name to specify an instance to use - either when initializing the service (for example, `service = QiskitRuntimeService(token=\"<IBM Cloud API key>\", instance=\"<CRN or instance name>\" )`), or when sending the workload to a QPU (for example, `service.backend(name=\"<backend_name>\", instance=\"<CRN>\")`).  When an instance is passed in, only backends and jobs from that instance are available (allowed in Qiskit Runtime v0.40.1 and later).\n",
+    "\n",
+    "If an instance is not included when initializing the service, all backends and jobs across all instances in your account are available. In this case, when a backend is specified, an instance that can access the backend is found and used in the following order:\n",
+    "\n",
+    "1. If your account only has access to one instance, it is selected by default.\n",
+    "1. If an instance was passed into [`save_account()`,](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account) it is used.\n",
+    "2. If your account has access to multiple instances but only one can access the requested QPU, the instance with access is selected. If this instance is not associated with a free plan, a cost will be incurred.\n",
+    "3. If your account has access to multiple instances that can access the requested QPU, the system uses your specified plan preferences (set on the [`QiskitRuntimeService()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#qiskitruntimeservice) initializer or the [`save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account) method) to choose a plan and instance.\n",
+    "\n",
+    "<Admonition type=\"important\">\n",
+    "Qiskit Runtime v0.40.1 and later is required for the following:\n",
+    "\n",
+    "    - Using the instance name to specify an instance\n",
+    "    - Not passing in an instance\n",
+    "    - Setting a preferred instance type and region\n",
+    "</Admonition>\n",
+    "\n",
+    "The instance's CRN is listed on the [Platform dashboard.](https://quantum.cloud.ibm.com/) Before running the below code, follow the steps to [save an account.](/docs/guides/cloud-setup#cloud-save)\n",
     "\n",
     "```python\n",
-    "# Specify an instance at service level. This becomes the default unless overwritten.\n",
+    "# Optional: Specify an instance at service level.\n",
+    "# This becomes the default unless overwritten.\n",
     "service = QiskitRuntimeService(instance=\"<CRN>\")\n",
     "backend = service.backend(\"<QPU-name>\")\n",
     "```\n",
