--- a/docs/migration-guides/qiskit-algorithms-module.mdx
+++ b/docs/migration-guides/qiskit-algorithms-module.mdx
@@ -613,7 +613,7 @@ hamiltonian = SparsePauliOp.from_list([("XXZ", 1), ("XYI", 1)])
 
 # example executing on a QPU
 service = QiskitRuntimeService()
-backend = service.backend(<SPECIFY BACKEND>)
+backend = service.backend(<backend_name>)
 
 with Session(backend=backend) as session:
     estimator = Estimator()
