--- a/docs/api/qiskit/release-notes/2.1.mdx
+++ b/docs/api/qiskit/release-notes/2.1.mdx
@@ -22,7 +22,7 @@ in_page_toc_max_heading_level: 3
 
 The Qiskit v2.1 release introduces several important enhancements in key areas including the C API, transpiler capabilities and quantum circuit usability. In addition, it includes many general improvements and bug fixes. The major highlights include:
 
-> *   *C API extensions:* Building on the work started in the previous release, Qiskit v2.1 adds support for creating and interacting with quantum circuits via C API functions, supporting the addition of standard gates, standard instructions and unitary gates. Also added in this release is a set of C functions to build and manipulate a [`Target`](/docs/api/qiskit/qiskit.transpiler.Target "qiskit.transpiler.Target") object, as preparation for supporting a complete C API-based transpilation workflow in the next release. In addition, [`QkComplex64`](/docs/api/qiskit/cdoc/qk-complex64#_cppv411qkcomplex64 "QkComplex64") is now defined as a struct, serving as a compiler-agnostic representation for complex numbers when working with Qiskit’s C API. The C API’s header file has also been updated so that it is generally compatible to be used natively in C++.
+> *   *C API extensions:* Building on the work started in the previous release, Qiskit v2.1 adds support for creating and interacting with quantum circuits via C API functions, supporting the addition of standard gates, standard instructions and unitary gates. Also added in this release is a set of C functions to build and manipulate a [`Target`](/docs/api/qiskit/qiskit.transpiler.Target "qiskit.transpiler.Target") object, as preparation for supporting a complete C API-based transpilation workflow in the next release. In addition, [`QkComplex64`](/docs/api/qiskit-c/qk-complex-64) is now defined as a struct, serving as a compiler-agnostic representation for complex numbers when working with Qiskit’s C API. The C API’s header file has also been updated so that it is generally compatible to be used natively in C++.
 > *   *Clifford+T basis set support:* Transpiling circuits for a target with Clifford+T gates is now supported out of the box. Under the hood, if the basis set consists only of Clifford+T gates, Qiskit ensures that the appropriate passes for handling these gates are added to the preset pass managers. This is an initial step toward supporting transpilation for fault-tolerant backends.
 > *   *Enhancements to* [`BoxOp`](/docs/api/qiskit/qiskit.circuit.BoxOp "qiskit.circuit.BoxOp"): This version adds the ability to attach custom annotations to [`BoxOp`](/docs/api/qiskit/qiskit.circuit.BoxOp "qiskit.circuit.BoxOp") instructions, further supporting the concept of box statements from OpenQASM 3 in Qiskit. This also includes annotation serialization in both the QASM and QPY formats. Additionally, support for using stretch durations in boxes has been added.
 > *   *Python 3.9 deprecation:* Python 3.9 is deprecated starting with Qiskit v2.1 and will no longer be supported in Qiskit v2.3.
@@ -33,7 +33,7 @@ For more details about the above and much more, please see the release notes bel
 
 ### C API Features
 
-*   The [Qiskit C API (qiskit.h)](/docs/api/qiskit/cdoc/index#c-api) now supports building and interacting with Quantum Circuits. The circuits C API centers around the `QkCircuit` opaque type that represents the circuit. The `QkCircuit` type enables building a circuit with any circuit element defined natively in Qiskit’s internal Rust data model for [`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit"). This currently includes [Standard gates](/docs/api/qiskit/circuit_library#standard-gates), [`Measure`](/docs/api/qiskit/circuit#qiskit.circuit.Measure "qiskit.circuit.Measure"), [`Delay`](/docs/api/qiskit/circuit#qiskit.circuit.Delay "qiskit.circuit.Delay"), [`Reset`](/docs/api/qiskit/circuit#qiskit.circuit.Reset "qiskit.circuit.Reset"), [`Barrier`](/docs/api/qiskit/circuit#qiskit.circuit.Barrier "qiskit.circuit.Barrier"), and [`UnitaryGate`](/docs/api/qiskit/qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate"). The capabilities of the circuits C API will expand in future release as more of the Qiskit data model is added natively to the internal Rust data model enabling it to be used in the C API.
+*   The [Qiskit C API (qiskit.h)](/docs/api/qiskit-c/index) now supports building and interacting with Quantum Circuits. The circuits C API centers around the `QkCircuit` opaque type that represents the circuit. The `QkCircuit` type enables building a circuit with any circuit element defined natively in Qiskit’s internal Rust data model for [`QuantumCircuit`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit"). This currently includes [Standard gates](/docs/api/qiskit/circuit_library#standard-gates), [`Measure`](/docs/api/qiskit/circuit#qiskit.circuit.Measure "qiskit.circuit.Measure"), [`Delay`](/docs/api/qiskit/circuit#qiskit.circuit.Delay "qiskit.circuit.Delay"), [`Reset`](/docs/api/qiskit/circuit#qiskit.circuit.Reset "qiskit.circuit.Reset"), [`Barrier`](/docs/api/qiskit/circuit#qiskit.circuit.Barrier "qiskit.circuit.Barrier"), and [`UnitaryGate`](/docs/api/qiskit/qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate"). The capabilities of the circuits C API will expand in future release as more of the Qiskit data model is added natively to the internal Rust data model enabling it to be used in the C API.
 
     For example, you can use the C API to build a 1000 qubit GHZ state:
 
@@ -69,7 +69,7 @@ For more details about the above and much more, please see the release notes bel
     }
     ```
 
-*   The [Qiskit C API (qiskit.h)](/docs/api/qiskit/cdoc/index#c-api) now supports building a [`Target`](/docs/api/qiskit/qiskit.transpiler.Target "qiskit.transpiler.Target") to represent a transpilation target. For example:
+*   The [Qiskit C API (qiskit.h)](/docs/api/qiskit-c/index) now supports building a [`Target`](/docs/api/qiskit/qiskit.transpiler.Target "qiskit.transpiler.Target") to represent a transpilation target. For example:
 
     ```C
     #include <qiskit.h>
