--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -226,7 +226,7 @@ This summary of the latest changes to the Qiskit Runtime service applies to anyo
 - Starting 2 June 2025 and continuing through the year, IBM Quantum will begin a gradual rollout of new features to [dynamic circuits](/docs/guides/classical-feedforward-and-control-flow) that will enable them at the utility scale.
 Improvements include the following:
 
-  - A 75x speedup in execution by using the [Gen3 engine stack](/docs/guides/runtime-options-overview#experimental-option-note)
+  - A 75x speedup in execution by using the Gen3 engine stack
   - Parallel execution of branches, which reduces circuit duration and improves result quality
   - Improvement in mid-circuit measurement
   - Better integration with dynamical decoupling
@@ -500,7 +500,7 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 
   - Updated code examples to fix a bug in [Get started with primitives](/docs/guides/get-started-with-primitives)
 
-  - Updates to [Introduction to options](/docs/guides/runtime-options-overview) to include the new [gen3-turbo](/docs/guides/runtime-options-overview#experimental-option-note) options
+  - Updates to [Introduction to options](/docs/guides/runtime-options-overview) to include the new gen3-turbo options
 
   - Copyediting and typo fixes across the documentation, including bugs reported by open-source contributors - thank you!
 
